# airline-destinations

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  url_notes.txt
.github/workflows/: scrape.yml
.streamlit/: config.toml
archive/: aenadestinations.py  bcndestinations.py  coordinates.py
config/: airport_urls.json
data/: routes_aena.parquet  routes_openflights.parquet  routes_openflights_global.parquet  routes_portugal.parquet
pyfly/: __main__.py  app.py  db.py  enrich.py  exceptions.py  ingest.py  trip_utils.py
pyfly/pages/: 1_My_Routes.py  1_Route_Map.py  2_My_Routes.py  2_Route_Explorer.py  2_Trip_Creator.py  3_Airport_Explorer.py  3_My_Trips.py  4_Trip_Creator.py  5_My_Trips.py
pyfly/sources/: aena.py  base.py  openflights.py  opensky.py
tests/: test_aena.py  test_openflights.py  test_opensky.py
