[project]
name = "pyfly"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pydeck>=0.9",
    "streamlit>=1.30",
    "httpx>=0.27",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
