[project]
name = "pyfly"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pydeck>=0.9",
    "streamlit>=1.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "pandas>=2.0",
    "pycountry>=24.0",
    "rapidfuzz>=3.14.5",
    "geopy>=2.4.1",
    "streamlit-sortables>=0.2.0",
]

# Scraper deps only needed for CLI ingestion, not the Streamlit app.
# Install with: uv sync --extra scraper
[project.optional-dependencies]
scraper = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
